[gd_scene load_steps=28 format=3 uid="uid://cpfdvkc5prymv"]

[ext_resource type="Script" path="res://Scrpits/Mage1.gd" id="1_jd5qh"]
[ext_resource type="Texture2D" uid="uid://nirbdaaf5rvr" path="res://Assets/Enemys/Mage1/mage.png" id="2_cu8st"]
[ext_resource type="AudioStream" uid="uid://b0wl1oftyh2ky" path="res://SoundFX/Minifantasy_Dungeon_SFX/21_orc_damage_3.wav" id="3_m4nwf"]
[ext_resource type="PackedScene" uid="uid://bvlwbq6jwj25q" path="res://Objects/HudObjects/progress_bar3.tscn" id="4_tiiwx"]
[ext_resource type="PackedScene" uid="uid://d34essgm7nkpw" path="res://Objects/Efects/EnemyExplode.tscn" id="5_wgk21"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_vo1ju"]
blend_mode = 1
light_mode = 2
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Gradient" id="Gradient_gmaye"]
offsets = PackedFloat32Array(0, 0.645161)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ombhn"]
gradient = SubResource("Gradient_gmaye")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.513761, 0.490826)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_vl3jr"]
blend_mode = 1
light_mode = 2

[sub_resource type="Gradient" id="Gradient_0x2va"]
offsets = PackedFloat32Array(0, 0.567742)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2d6ig"]
gradient = SubResource("Gradient_0x2va")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.490826, 0.477064)

[sub_resource type="Animation" id="Animation_0x1fp"]
resource_name = "atack"
length = 0.37
step = 0.01
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.36),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"do_hurt"
}]
}

[sub_resource type="Animation" id="Animation_sflce"]
resource_name = "death"
length = 0.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyExplode:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}

[sub_resource type="Animation" id="Animation_8hcg7"]
resource_name = "hurt"
length = 0.5

[sub_resource type="Animation" id="Animation_ksaeq"]
resource_name = "Iddle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_13ypt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyExplode:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6hwei"]
resource_name = "Run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xc5pc"]
_data = {
"Attack": SubResource("Animation_0x1fp"),
"Death": SubResource("Animation_sflce"),
"Hurt": SubResource("Animation_8hcg7"),
"Iddle": SubResource("Animation_ksaeq"),
"RESET": SubResource("Animation_13ypt"),
"Run": SubResource("Animation_6hwei")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nljga"]
radius = 4.94756
height = 26.2152

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nvbf3"]
animation = &"Death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kjn71"]
animation = &"Iddle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7fui2"]
animation = &"Run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ic34r"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dpwdg"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_abhdj"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_isctg"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_oje4e"]
states/Death/node = SubResource("AnimationNodeAnimation_nvbf3")
states/Death/position = Vector2(792.688, 175.138)
states/Iddle/node = SubResource("AnimationNodeAnimation_kjn71")
states/Iddle/position = Vector2(274, 277)
states/Run/node = SubResource("AnimationNodeAnimation_7fui2")
states/Run/position = Vector2(577, 233)
states/Start/position = Vector2(0, 305)
transitions = ["Start", "Iddle", SubResource("AnimationNodeStateMachineTransition_ic34r"), "Iddle", "Run", SubResource("AnimationNodeStateMachineTransition_dpwdg"), "Run", "Death", SubResource("AnimationNodeStateMachineTransition_abhdj"), "Death", "End", SubResource("AnimationNodeStateMachineTransition_isctg")]
graph_offset = Vector2(-154.674, 41.138)

[node name="Mage1" type="CharacterBody2D" groups=["enemies"]]
scale = Vector2(0.5, 0.5)
collision_layer = 4
collision_mask = 2
script = ExtResource("1_jd5qh")

[node name="PointLight2D" type="PointLight2D" parent="."]
material = SubResource("CanvasItemMaterial_vo1ju")
position = Vector2(0, 22)
scale = Vector2(0.5, 0.5)
enabled = false
texture = SubResource("GradientTexture2D_ombhn")

[node name="Alo" type="Sprite2D" parent="PointLight2D"]
modulate = Color(0.580392, 0, 0.282353, 0.160784)
material = SubResource("CanvasItemMaterial_vl3jr")
position = Vector2(2.84782, -11.411)
texture = SubResource("GradientTexture2D_2d6ig")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_cu8st")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xc5pc")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -3.14159
scale = Vector2(6.21232, 3.95699)
shape = SubResource("CapsuleShape2D_nljga")

[node name="ArrowDamage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_m4nwf")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_oje4e")
anim_player = NodePath("../AnimationPlayer")

[node name="ProgressBar" parent="." instance=ExtResource("4_tiiwx")]
visible = false
position = Vector2(-23.0519, -74.9186)
scale = Vector2(0.692642, 0.769481)

[node name="EnemyExplode" parent="." instance=ExtResource("5_wgk21")]
